JG-2003-07-11-0: Testsuite: Enhanced tight_integration test to
                            - check setting of NSLOTS and NHOSTS in tasks 
                              environment (issue 578)
                            - check shutdown of job when the master task fails 
                              (issue 579)
                            - check shutdown of job when a slave task fails
                            - check if job is shutdown when a slave task exceeds
                              a wallclock limit (issue 575)
                 Review:    CR

JG-2003-07-10-0: Bugfix:    *_RESERVED_USAGE gives wrong values for PE jobs.
                            NOTE: vmem for loosly integrated pe jobs is still 
                            incorrect. Can't fix it now due to conflicts with
                            complexes change (EB-2003-07-09-0).
                 Issue:     580
                 Review:    EB
                 Changed:   sge_execd

AH-2003-07-10-0: Enhancem.: In case of event client thread setup problems 
                            drmaa_init() returns error reason known by 
                            the implementation thread.
                            Implemented drmaa_control(), drmaa_version(),
                            drmaa_get_attribute_names() and 
                            drmaa_get_vector_attribute_names().
                            Implemented timeouts in drmaa_wait() and 
                            drmaa_synchronize().
                            Introduced C module for multi-threading utilities.
                            Always use sge_mutex_lock()/sge_mutex_unlock() to 
                            support DPRINTF() output in case of deadlocks - 
                            except in rmon module itself.
                            Added mutex 'message_id_view_mutex' in 
                            sge_language.c to fix deadlock in case of error 
                            during sge_language.c initialization.