@@ -83,7 +83,6 @@ enum {
    SGE_QUEUE_LIST,
    SGE_JOB_LIST,
    SGE_EVENT_LIST,
-   SGE_COMPLEX_LIST,
    SGE_CENTRY_LIST,
    SGE_ORDER_LIST,
    SGE_MASTER_EVENT,
